# Tiny-dLLM

./: README.md  data.py  main.py  optimizer.py  pyproject.toml  train.py
configs/: default.py  muon.py
tiny_dllm/: optimizer.py  train.py
tiny_dllm/configs/: default.py  muon.py
